--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.74.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +16,11 @@
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.0.23",
     "react-modal": "^3.16.1",
+    "react-native-arkit": "^0.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.153.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
