--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.14.1",
+    "next": "^13.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -21,7 +22,27 @@
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "three": "^0.153.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.6",
+    "firebase": "^9.22.2",
+    "lucide-react": "^0.244.0",
+    "next": "13.4.6",
+    "next-auth": "^4.22.1",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swiper": "^9.4.1",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +69,10 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "^7.0.21"
+    "@storybook/react": "^7.0.21",
+    "tailwindcss": "^3.3.2"
   }
+
+ 
+
 }
